@@ -1,0 +1,21 @@
+
+/*
+ * FLUENDO S.A.
+ * Copyright (C) <2012>  <support@fluendo.com>
+ */
+
+#ifndef __GST_TTML_FORWARD_H__
+#define __GST_TTML_FORWARD_H__
+
+G_BEGIN_DECLS
+
+/* Forward type declarations */
+typedef struct _GstTTMLState GstTTMLState;
+typedef struct _GstTTMLSpan GstTTMLSpan;
+typedef struct _GstTTMLAttribute GstTTMLAttribute;
+typedef struct _GstTTMLEvent GstTTMLEvent;
+
+G_END_DECLS
+
+#endif /* __GST_TTML_FORWARD_H__ */
+ 
